[package]
name = "asaru"
version = "0.2.0"
description = "Asana Tasks Search CLI"
repository = "https://github.com/thekuwayama/asaru"
documentation = "https://docs.rs/asaru"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5"