[package]
name = "asaru"
version = "0.3.0"
description = "Asana Tasks Search CLI"
repository = "https://github.com/thekuwayama/asaru"
documentation = "https://docs.rs/asaru"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
futures = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
unicode-width = "0.1"